build/transformers/v4.13.0/en/model_doc/beit.mdx
---
local: beit
sections:
- local: overview
  title: Overview
- local: transformers.models.beit.modeling_beit.BeitModelOutputWithPooling
  title: BEiT specific outputs
- local: transformers.BeitConfig
  title: BeitConfig
- local: transformers.BeitFeatureExtractor
  title: BeitFeatureExtractor
- local: transformers.BeitModel
  title: BeitModel
- local: transformers.BeitForMaskedImageModeling
  title: BeitForMaskedImageModeling
- local: transformers.BeitForImageClassification
  title: BeitForImageClassification
- local: transformers.BeitForSemanticSegmentation
  title: BeitForSemanticSegmentation
- local: transformers.FlaxBeitModel
  title: FlaxBeitModel
- local: transformers.FlaxBeitForMaskedImageModeling
  title: FlaxBeitForMaskedImageModeling
- local: transformers.FlaxBeitForImageClassification
  title: FlaxBeitForImageClassification
title: BEiT
---
<script>
import Tip from "./Tip.svelte";
import Youtube from "./Youtube.svelte";
import Docstring from "./Docstring.svelte";
import CodeBlock from "./CodeBlock.svelte";
import CodeBlockFw from "./CodeBlockFw.svelte";
import ColabDropdown from "./ColabDropdown.svelte";
import IconCopyLink from "./IconCopyLink.svelte";

export let fw: "pt" | "tf"
</script>

<!--Copyright 2021 The HuggingFace Team. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
the License. You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
specific language governing permissions and limitations under the License.
-->

<h1 id="beit">BEiT</h1>

<h2 id="overview">Overview</h2>

The BEiT model was proposed in [BEiT: BERT Pre-Training of Image Transformers](https://arxiv.org/abs/2106.08254) by
Hangbo Bao, Li Dong and Furu Wei. Inspired by BERT, BEiT is the first paper that makes self-supervised pre-training of
Vision Transformers (ViTs) outperform supervised pre-training. Rather than pre-training the model to predict the class
of an image (as done in the [original ViT paper](https://arxiv.org/abs/2010.11929)), BEiT models are pre-trained to
predict visual tokens from the codebook of OpenAI's [DALL-E model](https://arxiv.org/abs/2102.12092) given masked
patches.

The abstract from the paper is the following:

*We introduce a self-supervised vision representation model BEiT, which stands for Bidirectional Encoder representation
from Image Transformers. Following BERT developed in the natural language processing area, we propose a masked image
modeling task to pretrain vision Transformers. Specifically, each image has two views in our pre-training, i.e, image
patches (such as 16x16 pixels), and visual tokens (i.e., discrete tokens). We first "tokenize" the original image into
visual tokens. Then we randomly mask some image patches and fed them into the backbone Transformer. The pre-training
objective is to recover the original visual tokens based on the corrupted image patches. After pre-training BEiT, we
directly fine-tune the model parameters on downstream tasks by appending task layers upon the pretrained encoder.
Experimental results on image classification and semantic segmentation show that our model achieves competitive results
with previous pre-training methods. For example, base-size BEiT achieves 83.2% top-1 accuracy on ImageNet-1K,
significantly outperforming from-scratch DeiT training (81.8%) with the same setup. Moreover, large-size BEiT obtains
86.3% only using ImageNet-1K, even outperforming ViT-L with supervised pre-training on ImageNet-22K (85.2%).*

Tips:

- BEiT models are regular Vision Transformers, but pre-trained in a self-supervised way rather than supervised. They
  outperform both the original model (ViT) as well as Data-efficient Image Transformers (DeiT) when fine-tuned on
  ImageNet-1K and CIFAR-100.
- As the BEiT models expect each image to be of the same size (resolution), one can use
  [BeitFeatureExtractor](/docs/transformers/master/en/model_doc/beit#transformers.BeitFeatureExtractor) to resize (or rescale) and normalize images for the model.
- Both the patch resolution and image resolution used during pre-training or fine-tuning are reflected in the name of
  each checkpoint. For example, `microsoft/beit-base-patch16-224` refers to a base-sized architecture with patch
  resolution of 16x16 and fine-tuning resolution of 224x224. All checkpoints can be found on the [hub](https://huggingface.co/models?search=microsoft/beit).
- The available checkpoints are either (1) pre-trained on [ImageNet-22k](http://www.image-net.org/) (a collection of
  14 million images and 22k classes) only, (2) also fine-tuned on ImageNet-22k or (3) also fine-tuned on [ImageNet-1k](http://www.image-net.org/challenges/LSVRC/2012/) (also referred to as ILSVRC 2012, a collection of 1.3 million
  images and 1,000 classes).
- BEiT uses relative position embeddings, inspired by the T5 model. During pre-training, the authors shared the
  relative position bias among the several self-attention layers. During fine-tuning, each layer's relative position
  bias is initialized with the shared relative position bias obtained after pre-training. Note that, if one wants to
  pre-train a model from scratch, one needs to either set the `use_relative_position_bias` or the
  `use_relative_position_bias` attribute of [BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig) to `True` in order to add
  position embeddings.

This model was contributed by [nielsr](https://huggingface.co/nielsr). The JAX/FLAX version of this model was
contributed by [kamalkraj](https://huggingface.co/kamalkraj). The original code can be found [here](https://github.com/microsoft/unilm/tree/master/beit).


<h2 id="transformers.models.beit.modeling_beit.BeitModelOutputWithPooling">BEiT specific outputs</h2>

<div class="docstring">

<docstring><name>class transformers.models.beit.modeling\_beit.BeitModelOutputWithPooling</name><anchor>transformers.models.beit.modeling_beit.BeitModelOutputWithPooling</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_beit.py#L47</source><parameters>[{"name": "last_hidden_state", "val": ": FloatTensor = None"}, {"name": "pooler_output", "val": ": FloatTensor = None"}, {"name": "hidden_states", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}, {"name": "attentions", "val": ": typing.Optional[typing.Tuple[torch.FloatTensor]] = None"}]</parameters><paramsdesc>- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`) --
  Sequence of hidden-states at the output of the last layer of the model.
- **pooler_output** (`torch.FloatTensor` of shape `(batch_size, hidden_size)`) --
  Average of the last layer hidden states of the patch tokens (excluding the _[CLS]_ token) if
  _config.use_mean_pooling_ is set to True. If set to False, then the final hidden state of the _[CLS]_ token
  will be returned.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</paramsdesc><paramgroups>0</paramgroups></docstring>

Class for outputs of [BeitModel](/docs/transformers/master/en/model_doc/beit#transformers.BeitModel).




</div>

<div class="docstring">

<docstring><name>class transformers.models.beit.modeling\_flax\_beit.FlaxBeitModelOutputWithPooling</name><anchor>transformers.models.beit.modeling_flax_beit.FlaxBeitModelOutputWithPooling</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_flax_beit.py#L45</source><parameters>[{"name": "last_hidden_state", "val": ": ndarray = None"}, {"name": "pooler_output", "val": ": ndarray = None"}, {"name": "hidden_states", "val": ": typing.Optional[typing.Tuple[jax._src.numpy.lax_numpy.ndarray]] = None"}, {"name": "attentions", "val": ": typing.Optional[typing.Tuple[jax._src.numpy.lax_numpy.ndarray]] = None"}]</parameters><paramsdesc>- **last_hidden_state** (`jnp.ndarray` of shape `(batch_size, sequence_length, hidden_size)`) --
  Sequence of hidden-states at the output of the last layer of the model.
- **pooler_output** (`jnp.ndarray` of shape `(batch_size, hidden_size)`) --
  Average of the last layer hidden states of the patch tokens (excluding the _[CLS]_ token) if
  _config.use_mean_pooling_ is set to True. If set to False, then the final hidden state of the _[CLS]_ token
  will be returned.
- **hidden_states** (`tuple(jnp.ndarray)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) --
  Tuple of `jnp.ndarray` (one for the output of the embeddings + one for the output of each layer) of
  shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the model at the output of each
  layer plus the initial embedding outputs.
- **attentions** (`tuple(jnp.ndarray)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) --
  Tuple of `jnp.ndarray` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights after the attention softmax, used to compute the weighted average in
  the self-attention heads.</paramsdesc><paramgroups>0</paramgroups></docstring>

Class for outputs of [FlaxBeitModel](/docs/transformers/master/en/model_doc/beit#transformers.FlaxBeitModel).




</div>

<h2 id="transformers.BeitConfig">BeitConfig</h2>

<div class="docstring">

<docstring><name>class transformers.BeitConfig</name><anchor>transformers.BeitConfig</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/configuration_beit.py#L29</source><parameters>[{"name": "vocab_size", "val": " = 8192"}, {"name": "hidden_size", "val": " = 768"}, {"name": "num_hidden_layers", "val": " = 12"}, {"name": "num_attention_heads", "val": " = 12"}, {"name": "intermediate_size", "val": " = 3072"}, {"name": "hidden_act", "val": " = 'gelu'"}, {"name": "hidden_dropout_prob", "val": " = 0.0"}, {"name": "attention_probs_dropout_prob", "val": " = 0.0"}, {"name": "initializer_range", "val": " = 0.02"}, {"name": "layer_norm_eps", "val": " = 1e-12"}, {"name": "is_encoder_decoder", "val": " = False"}, {"name": "image_size", "val": " = 224"}, {"name": "patch_size", "val": " = 16"}, {"name": "num_channels", "val": " = 3"}, {"name": "use_mask_token", "val": " = False"}, {"name": "use_absolute_position_embeddings", "val": " = False"}, {"name": "use_relative_position_bias", "val": " = False"}, {"name": "use_shared_relative_position_bias", "val": " = False"}, {"name": "layer_scale_init_value", "val": " = 0.1"}, {"name": "drop_path_rate", "val": " = 0.1"}, {"name": "use_mean_pooling", "val": " = True"}, {"name": "out_indices", "val": " = [3, 5, 7, 11]"}, {"name": "pool_scales", "val": " = [1, 2, 3, 6]"}, {"name": "use_auxiliary_head", "val": " = True"}, {"name": "auxiliary_loss_weight", "val": " = 0.4"}, {"name": "auxiliary_channels", "val": " = 256"}, {"name": "auxiliary_num_convs", "val": " = 1"}, {"name": "auxiliary_concat_input", "val": " = False"}, {"name": "semantic_loss_ignore_index", "val": " = 255"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **vocab_size** (`int`, _optional_, defaults to 8092) --
  Vocabulary size of the BEiT model. Defines the number of different image tokens that can be used during
  pre-training.
- **hidden_size** (`int`, _optional_, defaults to 768) --
  Dimensionality of the encoder layers and the pooler layer.
- **num_hidden_layers** (`int`, _optional_, defaults to 12) --
  Number of hidden layers in the Transformer encoder.
- **num_attention_heads** (`int`, _optional_, defaults to 12) --
  Number of attention heads for each attention layer in the Transformer encoder.
- **intermediate_size** (`int`, _optional_, defaults to 3072) --
  Dimensionality of the "intermediate" (i.e., feed-forward) layer in the Transformer encoder.
- **hidden_act** (`str` or `function`, _optional_, defaults to `"gelu"`) --
  The non-linear activation function (function or string) in the encoder and pooler. If string,
  `"gelu"`, `"relu"`, `"selu"` and `"gelu_new"` are supported.
- **hidden_dropout_prob** (`float`, _optional_, defaults to 0.1) --
  The dropout probability for all fully connected layers in the embeddings, encoder, and pooler.
- **attention_probs_dropout_prob** (`float`, _optional_, defaults to 0.1) --
  The dropout ratio for the attention probabilities.
- **initializer_range** (`float`, _optional_, defaults to 0.02) --
  The standard deviation of the truncated_normal_initializer for initializing all weight matrices.
- **layer_norm_eps** (`float`, _optional_, defaults to 1e-12) --
  The epsilon used by the layer normalization layers.
- **image_size** (`int`, _optional_, defaults to `224`) --
  The size (resolution) of each image.
- **patch_size** (`int`, _optional_, defaults to `16`) --
  The size (resolution) of each patch.
- **num_channels** (`int`, _optional_, defaults to `3`) --
  The number of input channels.
- **use_mask_token** (`bool`, _optional_, defaults to `False`) --
  Whether to use a mask token for masked image modeling.
- **use_absolute_position_embeddings** (`bool`, _optional_, defaults to `False`) --
  Whether to use BERT-style absolute position embeddings.
- **use_relative_position_bias** (`bool`, _optional_, defaults to `False`) --
  Whether to use T5-style relative position embeddings in the self-attention layers.
- **use_shared_relative_position_bias** (`bool`, _optional_, defaults to `False`) --
  Whether to use the same relative position embeddings across all self-attention layers of the Transformer.
- **layer_scale_init_value** (`float`, _optional_, defaults to 0.1) --
  Scale to use in the self-attention layers. 0.1 for base, 1e-5 for large. Set 0 to disable layer scale.
- **drop_path_rate** (`float`, _optional_, defaults to 0.1) --
  Stochastic depth rate per sample (when applied in the main path of residual layers).
- **use_mean_pooling** (`bool`, _optional_, defaults to `True`) --
  Whether to mean pool the final hidden states of the patches instead of using the final hidden state of the
  CLS token, before applying the classification head.
- **out_indices** (`List[int]`, _optional_, defaults to `[3, 5, 7, 11]`) --
  Indices of the feature maps to use for semantic segmentation.
- **pool_scales** (`Tuple[int]`, _optional_, defaults to `[1, 2, 3, 6]`) --
  Pooling scales used in Pooling Pyramid Module applied on the last feature map.
- **use_auxiliary_head** (`bool`, _optional_, defaults to `True`) --
  Whether to use an auxiliary head during training.
- **auxiliary_loss_weight** (`float`, _optional_, defaults to 0.4) --
  Weight of the cross-entropy loss of the auxiliary head.
- **auxiliary_channels** (`int`, _optional_, defaults to 256) --
  Number of channels to use in the auxiliary head.
- **auxiliary_num_convs** (`int`, _optional_, defaults to 1) --
  Number of convolutional layers to use in the auxiliary head.
- **auxiliary_concat_input** (`bool`, _optional_, defaults to `False`) --
  Whether to concatenate the output of the auxiliary head with the input before the classification layer.
- **semantic_loss_ignore_index** (`int`, _optional_, defaults to 255) --
  The index that is ignored by the loss function of the semantic segmentation model.</paramsdesc><paramgroups>0</paramgroups></docstring>

This is the configuration class to store the configuration of a [BeitModel](/docs/transformers/master/en/model_doc/beit#transformers.BeitModel). It is used to
instantiate an BEiT model according to the specified arguments, defining the model architecture. Instantiating a
configuration with the defaults will yield a similar configuration to that of the BEiT
[microsoft/beit-base-patch16-224-in22k](https://huggingface.co/microsoft/beit-base-patch16-224-in22k)
architecture.



Example:

```python
>>> from transformers import BeitModel, BeitConfig

>>> # Initializing a BEiT beit-base-patch16-224-in22k style configuration
>>> configuration = BeitConfig()

>>> # Initializing a model from the beit-base-patch16-224-in22k style configuration
>>> model = BeitModel(configuration)

>>> # Accessing the model configuration
>>> configuration = model.config
```


</div>

<h2 id="transformers.BeitFeatureExtractor">BeitFeatureExtractor</h2>

<div class="docstring">

<docstring><name>class transformers.BeitFeatureExtractor</name><anchor>transformers.BeitFeatureExtractor</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/feature_extraction_beit.py#L37</source><parameters>[{"name": "do_resize", "val": " = True"}, {"name": "size", "val": " = 256"}, {"name": "resample", "val": " = 3"}, {"name": "do_center_crop", "val": " = True"}, {"name": "crop_size", "val": " = 224"}, {"name": "do_normalize", "val": " = True"}, {"name": "image_mean", "val": " = None"}, {"name": "image_std", "val": " = None"}, {"name": "reduce_labels", "val": " = False"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **do_resize** (`bool`, _optional_, defaults to `True`) --
  Whether to resize the input to a certain `size`.
- **size** (`int` or `Tuple(int)`, _optional_, defaults to 256) --
  Resize the input to the given size. If a tuple is provided, it should be (width, height). If only an
  integer is provided, then the input will be resized to (size, size). Only has an effect if `do_resize`
  is set to `True`.
- **resample** (`int`, _optional_, defaults to `PIL.Image.BICUBIC`) --
  An optional resampling filter. This can be one of `PIL.Image.NEAREST`, `PIL.Image.BOX`,
  `PIL.Image.BILINEAR`, `PIL.Image.HAMMING`, `PIL.Image.BICUBIC` or `PIL.Image.LANCZOS`.
  Only has an effect if `do_resize` is set to `True`.
- **do_center_crop** (`bool`, _optional_, defaults to `True`) --
  Whether to crop the input at the center. If the input size is smaller than `crop_size` along any edge,
  the image is padded with 0's and then center cropped.
- **crop_size** (`int`, _optional_, defaults to 224) --
  Desired output size when applying center-cropping. Only has an effect if `do_center_crop` is set to
  `True`.
- **do_normalize** (`bool`, _optional_, defaults to `True`) --
  Whether or not to normalize the input with `image_mean` and `image_std`.
- **image_mean** (`List[int]`, defaults to `[0.5, 0.5, 0.5]`) --
  The sequence of means for each channel, to be used when normalizing images.
- **image_std** (`List[int]`, defaults to `[0.5, 0.5, 0.5]`) --
  The sequence of standard deviations for each channel, to be used when normalizing images.
- **reduce_labels** (`bool`, _optional_, defaults to `False`) --
  Whether or not to reduce all label values of segmentation maps by 1. Usually used for datasets where 0 is
  used for background, and background itself is not included in all classes of a dataset (e.g. ADE20k). The
  background label will be replaced by 255.</paramsdesc><paramgroups>0</paramgroups></docstring>

Constructs a BEiT feature extractor.

This feature extractor inherits from [FeatureExtractionMixin](/docs/transformers/master/en/main_classes/feature_extractor#transformers.feature_extraction_utils.FeatureExtractionMixin) which
contains most of the main methods. Users should refer to this superclass for more information regarding those
methods.





<div class="docstring">
<docstring><name>\_\_call\_\_</name><anchor>transformers.BeitFeatureExtractor.__call__</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/feature_extraction_beit.py#L100</source><parameters>[{"name": "images", "val": ": typing.Union[PIL.Image.Image, numpy.ndarray, ForwardRef('torch.Tensor'), typing.List[PIL.Image.Image], typing.List[numpy.ndarray], typing.List[ForwardRef('torch.Tensor')]]"}, {"name": "segmentation_maps", "val": ": typing.Union[PIL.Image.Image, numpy.ndarray, ForwardRef('torch.Tensor'), typing.List[PIL.Image.Image], typing.List[numpy.ndarray], typing.List[ForwardRef('torch.Tensor')]] = None"}, {"name": "return_tensors", "val": ": typing.Union[str, transformers.file_utils.TensorType, NoneType] = None"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **images** (`PIL.Image.Image`, `np.ndarray`, `torch.Tensor`, `List[PIL.Image.Image]`, `List[np.ndarray]`, `List[torch.Tensor]`) --
  The image or batch of images to be prepared. Each image can be a PIL image, NumPy array or PyTorch
  tensor. In case of a NumPy array/PyTorch tensor, each image should be of shape (C, H, W), where C is a
  number of channels, H and W are image height and width.

- **segmentation_maps** (`PIL.Image.Image`, `np.ndarray`, `torch.Tensor`, `List[PIL.Image.Image]`, `List[np.ndarray]`, `List[torch.Tensor]`, _optional_) --
  Optionally, the corresponding semantic segmentation maps with the pixel-wise annotations.

- **return_tensors** (`str` or [TensorType](/docs/transformers/master/en/internal/file_utils#transformers.TensorType), _optional_, defaults to `'np'`) --
  If set, will return tensors of a particular framework. Acceptable values are:

  - `'tf'`: Return TensorFlow `tf.constant` objects.
  - `'pt'`: Return PyTorch `torch.Tensor` objects.
  - `'np'`: Return NumPy `np.ndarray` objects.
  - `'jax'`: Return JAX `jnp.ndarray` objects.</paramsdesc><paramgroups>0</paramgroups><rettype>[BatchFeature](/docs/transformers/master/en/main_classes/feature_extractor#transformers.BatchFeature)</rettype><retdesc>A [BatchFeature](/docs/transformers/master/en/main_classes/feature_extractor#transformers.BatchFeature) with the following fields:

- **pixel_values** -- Pixel values to be fed to a model, of shape (batch_size, num_channels, height,
  width).
- **labels** -- Optional labels to be fed to a model (when `segmentation_maps` are provided)</retdesc></docstring>

Main method to prepare for the model one or several image(s).

<Tip warning={true}>

NumPy arrays and PyTorch tensors are converted to PIL images when resizing, so the most efficient is to pass
PIL images.

</Tip>








</div></div>

<h2 id="transformers.BeitModel">BeitModel</h2>

<div class="docstring">

<docstring><name>class transformers.BeitModel</name><anchor>transformers.BeitModel</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_beit.py#L588</source><parameters>[{"name": "config", "val": ""}, {"name": "add_pooling_layer", "val": " = True"}]</parameters><paramsdesc>- **config** ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.</paramsdesc><paramgroups>0</paramgroups></docstring>
The bare Beit Model transformer outputting raw hidden-states without any specific head on top.
This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) subclass. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.BeitModel.forward</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_beit.py#L615</source><parameters>[{"name": "pixel_values", "val": " = None"}, {"name": "bool_masked_pos", "val": " = None"}, {"name": "head_mask", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}]</parameters><paramsdesc>- **pixel_values** (`torch.FloatTensor` of shape `(batch_size, num_channels, height, width)`) --
  Pixel values. Pixel values can be obtained using [BeitFeatureExtractor](/docs/transformers/master/en/model_doc/beit#transformers.BeitFeatureExtractor). See
  [transformers.BeitFeatureExtractor.__call__()](/docs/transformers/master/en/model_doc/beit#transformers.BeitFeatureExtractor.__call__) for details.

- **head_mask** (`torch.FloatTensor` of shape `(num_heads,)` or `(num_layers, num_heads)`, _optional_) --
  Mask to nullify selected heads of the self-attention modules. Mask values selected in `[0, 1]`:

  - 1 indicates the head is **not masked**,
  - 0 indicates the head is **masked**.

- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/master/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.</paramsdesc><paramgroups>0</paramgroups><rettype>[BeitModelOutputWithPooling](/docs/transformers/master/en/model_doc/beit#transformers.models.beit.modeling_beit.BeitModelOutputWithPooling) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [BeitModelOutputWithPooling](/docs/transformers/master/en/model_doc/beit#transformers.models.beit.modeling_beit.BeitModelOutputWithPooling) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) and inputs.

- **last_hidden_state** (`torch.FloatTensor` of shape `(batch_size, sequence_length, hidden_size)`) -- Sequence of hidden-states at the output of the last layer of the model.
- **pooler_output** (`torch.FloatTensor` of shape `(batch_size, hidden_size)`) -- Average of the last layer hidden states of the patch tokens (excluding the _[CLS]_ token) if
  _config.use_mean_pooling_ is set to True. If set to False, then the final hidden state of the _[CLS]_ token
  will be returned.
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</retdesc></docstring>
The [BeitModel](/docs/transformers/master/en/model_doc/beit#transformers.BeitModel) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>



Examples:

```python
>>> from transformers import BeitFeatureExtractor, BeitModel
>>> from PIL import Image
>>> import requests

>>> url = 'http://images.cocodataset.org/val2017/000000039769.jpg'
>>> image = Image.open(requests.get(url, stream=True).raw)

>>> feature_extractor = BeitFeatureExtractor.from_pretrained('microsoft/beit-base-patch16-224-pt22k-ft22k')
>>> model = BeitModel.from_pretrained('microsoft/beit-base-patch16-224-pt22k-ft22k')

>>> inputs = feature_extractor(images=image, return_tensors="pt")
>>> outputs = model(**inputs)
>>> last_hidden_states = outputs.last_hidden_state
```






</div></div>

<h2 id="transformers.BeitForMaskedImageModeling">BeitForMaskedImageModeling</h2>

<div class="docstring">

<docstring><name>class transformers.BeitForMaskedImageModeling</name><anchor>transformers.BeitForMaskedImageModeling</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_beit.py#L708</source><parameters>[{"name": "config", "val": ""}]</parameters><paramsdesc>- **config** ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.</paramsdesc><paramgroups>0</paramgroups></docstring>
Beit Model transformer with a 'language' modeling head on top (to predict visual tokens).
This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) subclass. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.BeitForMaskedImageModeling.forward</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_beit.py#L722</source><parameters>[{"name": "pixel_values", "val": " = None"}, {"name": "bool_masked_pos", "val": " = None"}, {"name": "head_mask", "val": " = None"}, {"name": "labels", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}]</parameters><paramsdesc>- **pixel_values** (`torch.FloatTensor` of shape `(batch_size, num_channels, height, width)`) --
  Pixel values. Pixel values can be obtained using [BeitFeatureExtractor](/docs/transformers/master/en/model_doc/beit#transformers.BeitFeatureExtractor). See
  [transformers.BeitFeatureExtractor.__call__()](/docs/transformers/master/en/model_doc/beit#transformers.BeitFeatureExtractor.__call__) for details.

- **head_mask** (`torch.FloatTensor` of shape `(num_heads,)` or `(num_layers, num_heads)`, _optional_) --
  Mask to nullify selected heads of the self-attention modules. Mask values selected in `[0, 1]`:

  - 1 indicates the head is **not masked**,
  - 0 indicates the head is **masked**.

- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/master/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.

- **bool_masked_pos** (`torch.BoolTensor` of shape `(batch_size, num_patches)`) --
  Boolean masked positions. Indicates which patches are masked (1) and which aren't (0).

- **labels** (`torch.LongTensor` of shape `(batch_size,)`, _optional_) --
  Labels for computing the image classification/regression loss. Indices should be in `[0, ..., config.num_labels - 1]`. If `config.num_labels == 1` a regression loss is computed (Mean-Square loss),
  If `config.num_labels > 1` a classification loss is computed (Cross-Entropy).</paramsdesc><paramgroups>0</paramgroups><rettype>[MaskedLMOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.MaskedLMOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [MaskedLMOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.MaskedLMOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) and inputs.

- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` is provided) -- Masked language modeling (MLM) loss.
- **logits** (`torch.FloatTensor` of shape `(batch_size, sequence_length, config.vocab_size)`) -- Prediction scores of the language modeling head (scores for each vocabulary token before SoftMax).
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</retdesc></docstring>
The [BeitForMaskedImageModeling](/docs/transformers/master/en/model_doc/beit#transformers.BeitForMaskedImageModeling) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>



Examples:

```python
>>> from transformers import BeitFeatureExtractor, BeitForMaskedImageModeling
>>> from PIL import Image
>>> import requests

>>> url = 'http://images.cocodataset.org/val2017/000000039769.jpg'
>>> image = Image.open(requests.get(url, stream=True).raw)

>>> feature_extractor = BeitFeatureExtractor.from_pretrained('microsoft/beit-base-patch16-224-pt22k')
>>> model = BeitForMaskedImageModeling.from_pretrained('microsoft/beit-base-patch16-224-pt22k')

>>> inputs = feature_extractor(images=image, return_tensors="pt")
>>> outputs = model(**inputs)
>>> logits = outputs.logits
```






</div></div>

<h2 id="transformers.BeitForImageClassification">BeitForImageClassification</h2>

<div class="docstring">

<docstring><name>class transformers.BeitForImageClassification</name><anchor>transformers.BeitForImageClassification</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_beit.py#L800</source><parameters>[{"name": "config", "val": ""}]</parameters><paramsdesc>- **config** ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.</paramsdesc><paramgroups>0</paramgroups></docstring>

Beit Model transformer with an image classification head on top (a linear layer on top of the average of the final
hidden states of the patch tokens) e.g. for ImageNet.

This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) subclass. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.BeitForImageClassification.forward</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_beit.py#L813</source><parameters>[{"name": "pixel_values", "val": " = None"}, {"name": "head_mask", "val": " = None"}, {"name": "labels", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}]</parameters><paramsdesc>- **pixel_values** (`torch.FloatTensor` of shape `(batch_size, num_channels, height, width)`) --
  Pixel values. Pixel values can be obtained using [BeitFeatureExtractor](/docs/transformers/master/en/model_doc/beit#transformers.BeitFeatureExtractor). See
  [transformers.BeitFeatureExtractor.__call__()](/docs/transformers/master/en/model_doc/beit#transformers.BeitFeatureExtractor.__call__) for details.

- **head_mask** (`torch.FloatTensor` of shape `(num_heads,)` or `(num_layers, num_heads)`, _optional_) --
  Mask to nullify selected heads of the self-attention modules. Mask values selected in `[0, 1]`:

  - 1 indicates the head is **not masked**,
  - 0 indicates the head is **masked**.

- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/master/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.

- **labels** (`torch.LongTensor` of shape `(batch_size,)`, _optional_) --
  Labels for computing the image classification/regression loss. Indices should be in `[0, ..., config.num_labels - 1]`. If `config.num_labels == 1` a regression loss is computed (Mean-Square loss),
  If `config.num_labels > 1` a classification loss is computed (Cross-Entropy).</paramsdesc><paramgroups>0</paramgroups><rettype>[SequenceClassifierOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.SequenceClassifierOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [SequenceClassifierOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.SequenceClassifierOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) and inputs.

- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` is provided) -- Classification (or regression if config.num_labels==1) loss.
- **logits** (`torch.FloatTensor` of shape `(batch_size, config.num_labels)`) -- Classification (or regression if config.num_labels==1) scores (before SoftMax).
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</retdesc></docstring>
The [BeitForImageClassification](/docs/transformers/master/en/model_doc/beit#transformers.BeitForImageClassification) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>



Examples:

```python
>>> from transformers import BeitFeatureExtractor, BeitForImageClassification
>>> from PIL import Image
>>> import requests

>>> url = 'http://images.cocodataset.org/val2017/000000039769.jpg'
>>> image = Image.open(requests.get(url, stream=True).raw)

>>> feature_extractor = BeitFeatureExtractor.from_pretrained('microsoft/beit-base-patch16-224')
>>> model = BeitForImageClassification.from_pretrained('microsoft/beit-base-patch16-224')

>>> inputs = feature_extractor(images=image, return_tensors="pt")
>>> outputs = model(**inputs)
>>> logits = outputs.logits
>>> # model predicts one of the 1000 ImageNet classes
>>> predicted_class_idx = logits.argmax(-1).item()
>>> print("Predicted class:", model.config.id2label[predicted_class_idx])
```






</div></div>

<h2 id="transformers.BeitForSemanticSegmentation">BeitForSemanticSegmentation</h2>

<div class="docstring">

<docstring><name>class transformers.BeitForSemanticSegmentation</name><anchor>transformers.BeitForSemanticSegmentation</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_beit.py#L1103</source><parameters>[{"name": "config", "val": ""}]</parameters><paramsdesc>- **config** ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.PreTrainedModel.from_pretrained) method to load the model
  weights.</paramsdesc><paramgroups>0</paramgroups></docstring>

Beit Model transformer with a semantic segmentation head on top e.g. for ADE20k, CityScapes.

This model is a PyTorch [torch.nn.Module](https://pytorch.org/docs/stable/nn.html#torch.nn.Module) subclass. Use
it as a regular PyTorch Module and refer to the PyTorch documentation for all matter related to general usage and
behavior.





<div class="docstring">
<docstring><name>forward</name><anchor>transformers.BeitForSemanticSegmentation.forward</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_beit.py#L1147</source><parameters>[{"name": "pixel_values", "val": " = None"}, {"name": "head_mask", "val": " = None"}, {"name": "labels", "val": " = None"}, {"name": "output_attentions", "val": " = None"}, {"name": "output_hidden_states", "val": " = None"}, {"name": "return_dict", "val": " = None"}]</parameters><paramsdesc>- **pixel_values** (`torch.FloatTensor` of shape `(batch_size, num_channels, height, width)`) --
  Pixel values. Pixel values can be obtained using [BeitFeatureExtractor](/docs/transformers/master/en/model_doc/beit#transformers.BeitFeatureExtractor). See
  [transformers.BeitFeatureExtractor.__call__()](/docs/transformers/master/en/model_doc/beit#transformers.BeitFeatureExtractor.__call__) for details.

- **head_mask** (`torch.FloatTensor` of shape `(num_heads,)` or `(num_layers, num_heads)`, _optional_) --
  Mask to nullify selected heads of the self-attention modules. Mask values selected in `[0, 1]`:

  - 1 indicates the head is **not masked**,
  - 0 indicates the head is **masked**.

- **output_attentions** (`bool`, _optional_) --
  Whether or not to return the attentions tensors of all attention layers. See `attentions` under returned
  tensors for more detail.
- **output_hidden_states** (`bool`, _optional_) --
  Whether or not to return the hidden states of all layers. See `hidden_states` under returned tensors for
  more detail.
- **return_dict** (`bool`, _optional_) --
  Whether or not to return a [ModelOutput](/docs/transformers/master/en/main_classes/output#transformers.file_utils.ModelOutput) instead of a plain tuple.

- **labels** (`torch.LongTensor` of shape `(batch_size, height, width)`, _optional_) --
  Ground truth semantic segmentation maps for computing the loss. Indices should be in `[0, ..., config.num_labels - 1]`. If `config.num_labels > 1`, a classification loss is computed
  (Cross-Entropy).</paramsdesc><paramgroups>0</paramgroups><rettype>[SequenceClassifierOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.SequenceClassifierOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [SequenceClassifierOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_outputs.SequenceClassifierOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) and inputs.

- **loss** (`torch.FloatTensor` of shape `(1,)`, _optional_, returned when `labels` is provided) -- Classification (or regression if config.num_labels==1) loss.
- **logits** (`torch.FloatTensor` of shape `(batch_size, config.num_labels)`) -- Classification (or regression if config.num_labels==1) scores (before SoftMax).
- **hidden_states** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `torch.FloatTensor` (one for the output of the embeddings + one for the output of each layer)
  of shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(torch.FloatTensor)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `torch.FloatTensor` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</retdesc></docstring>
The [BeitForSemanticSegmentation](/docs/transformers/master/en/model_doc/beit#transformers.BeitForSemanticSegmentation) forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>



Examples:

```python
>>> from transformers import BeitFeatureExtractor, BeitForSemanticSegmentation
>>> from PIL import Image
>>> import requests

>>> url = 'http://images.cocodataset.org/val2017/000000039769.jpg'
>>> image = Image.open(requests.get(url, stream=True).raw)

>>> feature_extractor = BeitFeatureExtractor.from_pretrained('microsoft/beit-base-finetuned-ade-640-640')
>>> model = BeitForSemanticSegmentation.from_pretrained('microsoft/beit-base-finetuned-ade-640-640')

>>> inputs = feature_extractor(images=image, return_tensors="pt")
>>> outputs = model(**inputs)
>>> # logits are of shape (batch_size, num_labels, height/4, width/4)
>>> logits = outputs.logits
```






</div></div>

<h2 id="transformers.FlaxBeitModel">FlaxBeitModel</h2>

<div class="docstring">

<docstring><name>class transformers.FlaxBeitModel</name><anchor>transformers.FlaxBeitModel</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_flax_beit.py#L725</source><parameters>[{"name": "config", "val": ": BeitConfig"}, {"name": "input_shape", "val": " = None"}, {"name": "seed", "val": ": int = 0"}, {"name": "dtype", "val": ": dtype = <class 'jax._src.numpy.lax_numpy.float32'>"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **config** ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel.from_pretrained) method to load the
  model weights.
- **dtype** (`jax.numpy.dtype`, _optional_, defaults to `jax.numpy.float32`) --
  The data type of the computation. Can be one of `jax.numpy.float32`, `jax.numpy.float16` (on
  GPUs) and `jax.numpy.bfloat16` (on TPUs).

  This can be used to enable mixed-precision training or half-precision inference on GPUs or TPUs. If
  specified all the computation will be performed with the given `dtype`.

  **Note that this only specifies the dtype of the computation and does not influence the dtype of model
  parameters.**

  If you wish to change the dtype of the model parameters, see
  [to_fp16()](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel.to_fp16) and [to_bf16()](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel.to_bf16).</paramsdesc><paramgroups>0</paramgroups></docstring>
The bare Beit Model transformer outputting raw hidden-states without any specific head on top.

This model inherits from [FlaxPreTrainedModel](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel). Check the superclass documentation for the
generic methods the library implements for all its model (such as downloading, saving and converting weights from
PyTorch models)

This model is also a Flax Linen [flax.linen.Module](https://flax.readthedocs.io/en/latest/flax.linen.html#module) subclass. Use it as a regular Flax linen Module
and refer to the Flax documentation for all matter related to general usage and behavior.

Finally, this model supports inherent JAX features such as:

- [Just-In-Time (JIT) compilation](https://jax.readthedocs.io/en/latest/jax.html#just-in-time-compilation-jit)
- [Automatic Differentiation](https://jax.readthedocs.io/en/latest/jax.html#automatic-differentiation)
- [Vectorization](https://jax.readthedocs.io/en/latest/jax.html#vectorization-vmap)
- [Parallelization](https://jax.readthedocs.io/en/latest/jax.html#parallelization-pmap)





<div class="docstring">
<docstring><name>\_\_call\_\_</name><anchor>transformers.FlaxBeitPreTrainedModel.__call__</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_flax_beit.py#L611</source><parameters>[{"name": "pixel_values", "val": ""}, {"name": "bool_masked_pos", "val": " = None"}, {"name": "params", "val": ": dict = None"}, {"name": "dropout_rng", "val": ": PRNGKey = None"}, {"name": "train", "val": ": bool = False"}, {"name": "output_attentions", "val": ": typing.Optional[bool] = None"}, {"name": "output_hidden_states", "val": ": typing.Optional[bool] = None"}, {"name": "return_dict", "val": ": typing.Optional[bool] = None"}]</parameters><rettype>[FlaxBeitModelOutputWithPooling](/docs/transformers/master/en/model_doc/beit#transformers.models.beit.modeling_flax_beit.FlaxBeitModelOutputWithPooling) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [FlaxBeitModelOutputWithPooling](/docs/transformers/master/en/model_doc/beit#transformers.models.beit.modeling_flax_beit.FlaxBeitModelOutputWithPooling) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration (`BeitConfig'>`) and inputs.

- **last_hidden_state** (`jnp.ndarray` of shape `(batch_size, sequence_length, hidden_size)`) -- Sequence of hidden-states at the output of the last layer of the model.
- **pooler_output** (`jnp.ndarray` of shape `(batch_size, hidden_size)`) -- Average of the last layer hidden states of the patch tokens (excluding the _[CLS]_ token) if
  _config.use_mean_pooling_ is set to True. If set to False, then the final hidden state of the _[CLS]_ token
  will be returned.
- **hidden_states** (`tuple(jnp.ndarray)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `jnp.ndarray` (one for the output of the embeddings + one for the output of each layer) of
  shape `(batch_size, sequence_length, hidden_size)`. Hidden-states of the model at the output of each
  layer plus the initial embedding outputs.
- **attentions** (`tuple(jnp.ndarray)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `jnp.ndarray` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`. Attentions weights after the attention softmax, used to compute the weighted average in
  the self-attention heads.</retdesc></docstring>
The `FlaxBeitPreTrainedModel` forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>





Examples:

```python
>>> from transformers import BeitFeatureExtractor, FlaxBeitModel
>>> from PIL import Image
>>> import requests

>>> url = 'http://images.cocodataset.org/val2017/000000039769.jpg'
>>> image = Image.open(requests.get(url, stream=True).raw)

>>> feature_extractor = BeitFeatureExtractor.from_pretrained('microsoft/beit-base-patch16-224-pt22k-ft22k')
>>> model = FlaxBeitModel.from_pretrained('microsoft/beit-base-patch16-224-pt22k-ft22k')

>>> inputs = feature_extractor(images=image, return_tensors="np")
>>> outputs = model(**inputs)
>>> last_hidden_states = outputs.last_hidden_state
```


</div></div>

<h2 id="transformers.FlaxBeitForMaskedImageModeling">FlaxBeitForMaskedImageModeling</h2>

<div class="docstring">

<docstring><name>class transformers.FlaxBeitForMaskedImageModeling</name><anchor>transformers.FlaxBeitForMaskedImageModeling</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_flax_beit.py#L807</source><parameters>[{"name": "config", "val": ": BeitConfig"}, {"name": "input_shape", "val": " = None"}, {"name": "seed", "val": ": int = 0"}, {"name": "dtype", "val": ": dtype = <class 'jax._src.numpy.lax_numpy.float32'>"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **config** ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel.from_pretrained) method to load the
  model weights.
- **dtype** (`jax.numpy.dtype`, _optional_, defaults to `jax.numpy.float32`) --
  The data type of the computation. Can be one of `jax.numpy.float32`, `jax.numpy.float16` (on
  GPUs) and `jax.numpy.bfloat16` (on TPUs).

  This can be used to enable mixed-precision training or half-precision inference on GPUs or TPUs. If
  specified all the computation will be performed with the given `dtype`.

  **Note that this only specifies the dtype of the computation and does not influence the dtype of model
  parameters.**

  If you wish to change the dtype of the model parameters, see
  [to_fp16()](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel.to_fp16) and [to_bf16()](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel.to_bf16).</paramsdesc><paramgroups>0</paramgroups></docstring>
Beit Model transformer with a 'language' modeling head on top (to predict visual tokens).

This model inherits from [FlaxPreTrainedModel](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel). Check the superclass documentation for the
generic methods the library implements for all its model (such as downloading, saving and converting weights from
PyTorch models)

This model is also a Flax Linen [flax.linen.Module](https://flax.readthedocs.io/en/latest/flax.linen.html#module) subclass. Use it as a regular Flax linen Module
and refer to the Flax documentation for all matter related to general usage and behavior.

Finally, this model supports inherent JAX features such as:

- [Just-In-Time (JIT) compilation](https://jax.readthedocs.io/en/latest/jax.html#just-in-time-compilation-jit)
- [Automatic Differentiation](https://jax.readthedocs.io/en/latest/jax.html#automatic-differentiation)
- [Vectorization](https://jax.readthedocs.io/en/latest/jax.html#vectorization-vmap)
- [Parallelization](https://jax.readthedocs.io/en/latest/jax.html#parallelization-pmap)





<div class="docstring">
<docstring><name>\_\_call\_\_</name><anchor>transformers.FlaxBeitPreTrainedModel.__call__</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_flax_beit.py#L611</source><parameters>[{"name": "pixel_values", "val": ""}, {"name": "bool_masked_pos", "val": " = None"}, {"name": "params", "val": ": dict = None"}, {"name": "dropout_rng", "val": ": PRNGKey = None"}, {"name": "train", "val": ": bool = False"}, {"name": "output_attentions", "val": ": typing.Optional[bool] = None"}, {"name": "output_hidden_states", "val": ": typing.Optional[bool] = None"}, {"name": "return_dict", "val": ": typing.Optional[bool] = None"}]</parameters><rettype>[FlaxMaskedLMOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_flax_outputs.FlaxMaskedLMOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [FlaxMaskedLMOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_flax_outputs.FlaxMaskedLMOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration (`BeitConfig'>`) and inputs.

- **logits** (`jnp.ndarray` of shape `(batch_size, sequence_length, config.vocab_size)`) -- Prediction scores of the language modeling head (scores for each vocabulary token before SoftMax).
- **hidden_states** (`tuple(jnp.ndarray)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `jnp.ndarray` (one for the output of the embeddings + one for the output of each layer) of
  shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(jnp.ndarray)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `jnp.ndarray` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</retdesc></docstring>
The `FlaxBeitPreTrainedModel` forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>

bool_masked_pos (`numpy.ndarray` of shape `(batch_size, num_patches)`):
Boolean masked positions. Indicates which patches are masked (1) and which aren't (0).






Examples:

```python
>>> from transformers import BeitFeatureExtractor, BeitForMaskedImageModeling
>>> from PIL import Image
>>> import requests

>>> url = 'http://images.cocodataset.org/val2017/000000039769.jpg'
>>> image = Image.open(requests.get(url, stream=True).raw)

>>> feature_extractor = BeitFeatureExtractor.from_pretrained('microsoft/beit-base-patch16-224-pt22k')
>>> model = BeitForMaskedImageModeling.from_pretrained('microsoft/beit-base-patch16-224-pt22k')

>>> inputs = feature_extractor(images=image, return_tensors="np")
>>> outputs = model(**inputs)
>>> logits = outputs.logits
```


</div></div>

<h2 id="transformers.FlaxBeitForImageClassification">FlaxBeitForImageClassification</h2>

<div class="docstring">

<docstring><name>class transformers.FlaxBeitForImageClassification</name><anchor>transformers.FlaxBeitForImageClassification</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_flax_beit.py#L892</source><parameters>[{"name": "config", "val": ": BeitConfig"}, {"name": "input_shape", "val": " = None"}, {"name": "seed", "val": ": int = 0"}, {"name": "dtype", "val": ": dtype = <class 'jax._src.numpy.lax_numpy.float32'>"}, {"name": "**kwargs", "val": ""}]</parameters><paramsdesc>- **config** ([BeitConfig](/docs/transformers/master/en/model_doc/beit#transformers.BeitConfig)) -- Model configuration class with all the parameters of the model.
  Initializing with a config file does not load the weights associated with the model, only the
  configuration. Check out the [from_pretrained()](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel.from_pretrained) method to load the
  model weights.
- **dtype** (`jax.numpy.dtype`, _optional_, defaults to `jax.numpy.float32`) --
  The data type of the computation. Can be one of `jax.numpy.float32`, `jax.numpy.float16` (on
  GPUs) and `jax.numpy.bfloat16` (on TPUs).

  This can be used to enable mixed-precision training or half-precision inference on GPUs or TPUs. If
  specified all the computation will be performed with the given `dtype`.

  **Note that this only specifies the dtype of the computation and does not influence the dtype of model
  parameters.**

  If you wish to change the dtype of the model parameters, see
  [to_fp16()](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel.to_fp16) and [to_bf16()](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel.to_bf16).</paramsdesc><paramgroups>0</paramgroups></docstring>

Beit Model transformer with an image classification head on top (a linear layer on top of the average of the final
hidden states of the patch tokens) e.g. for ImageNet.


This model inherits from [FlaxPreTrainedModel](/docs/transformers/master/en/main_classes/model#transformers.FlaxPreTrainedModel). Check the superclass documentation for the
generic methods the library implements for all its model (such as downloading, saving and converting weights from
PyTorch models)

This model is also a Flax Linen [flax.linen.Module](https://flax.readthedocs.io/en/latest/flax.linen.html#module) subclass. Use it as a regular Flax linen Module
and refer to the Flax documentation for all matter related to general usage and behavior.

Finally, this model supports inherent JAX features such as:

- [Just-In-Time (JIT) compilation](https://jax.readthedocs.io/en/latest/jax.html#just-in-time-compilation-jit)
- [Automatic Differentiation](https://jax.readthedocs.io/en/latest/jax.html#automatic-differentiation)
- [Vectorization](https://jax.readthedocs.io/en/latest/jax.html#vectorization-vmap)
- [Parallelization](https://jax.readthedocs.io/en/latest/jax.html#parallelization-pmap)





<div class="docstring">
<docstring><name>\_\_call\_\_</name><anchor>transformers.FlaxBeitPreTrainedModel.__call__</anchor><source>https://github.com/huggingface/transformers/blob/master/src/transformers/models/beit/modeling_flax_beit.py#L611</source><parameters>[{"name": "pixel_values", "val": ""}, {"name": "bool_masked_pos", "val": " = None"}, {"name": "params", "val": ": dict = None"}, {"name": "dropout_rng", "val": ": PRNGKey = None"}, {"name": "train", "val": ": bool = False"}, {"name": "output_attentions", "val": ": typing.Optional[bool] = None"}, {"name": "output_hidden_states", "val": ": typing.Optional[bool] = None"}, {"name": "return_dict", "val": ": typing.Optional[bool] = None"}]</parameters><rettype>[FlaxSequenceClassifierOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_flax_outputs.FlaxSequenceClassifierOutput) or `tuple(torch.FloatTensor)`</rettype><retdesc>A [FlaxSequenceClassifierOutput](/docs/transformers/master/en/main_classes/output#transformers.modeling_flax_outputs.FlaxSequenceClassifierOutput) or a tuple of
`torch.FloatTensor` (if `return_dict=False` is passed or when `config.return_dict=False`) comprising
various elements depending on the configuration (`BeitConfig'>`) and inputs.

- **logits** (`jnp.ndarray` of shape `(batch_size, config.num_labels)`) -- Classification (or regression if config.num_labels==1) scores (before SoftMax).
- **hidden_states** (`tuple(jnp.ndarray)`, _optional_, returned when `output_hidden_states=True` is passed or when `config.output_hidden_states=True`) -- Tuple of `jnp.ndarray` (one for the output of the embeddings + one for the output of each layer) of
  shape `(batch_size, sequence_length, hidden_size)`.

  Hidden-states of the model at the output of each layer plus the initial embedding outputs.
- **attentions** (`tuple(jnp.ndarray)`, _optional_, returned when `output_attentions=True` is passed or when `config.output_attentions=True`) -- Tuple of `jnp.ndarray` (one for each layer) of shape `(batch_size, num_heads, sequence_length, sequence_length)`.

  Attentions weights after the attention softmax, used to compute the weighted average in the self-attention
  heads.</retdesc></docstring>
The `FlaxBeitPreTrainedModel` forward method, overrides the `__call__` special method.

<Tip>

Although the recipe for forward pass needs to be defined within this function, one should call the
`Module` instance afterwards instead of this since the former takes care of running the pre and post
processing steps while the latter silently ignores them.

</Tip>





Example:

```python
>>> from transformers import BeitFeatureExtractor, FlaxBeitForImageClassification
>>> from PIL import Image
>>> import requests

>>> url = 'http://images.cocodataset.org/val2017/000000039769.jpg'
>>> image = Image.open(requests.get(url, stream=True).raw)

>>> feature_extractor = BeitFeatureExtractor.from_pretrained('microsoft/beit-base-patch16-224')
>>> model = FlaxBeitForImageClassification.from_pretrained('microsoft/beit-base-patch16-224')

>>> inputs = feature_extractor(images=image, return_tensors="np")
>>> outputs = model(**inputs)
>>> logits = outputs.logits
>>> # model predicts one of the 1000 ImageNet classes
>>> predicted_class_idx = logits.argmax(-1).item()
>>> print("Predicted class:", model.config.id2label[predicted_class_idx])
```


</div></div>
